tests/baselines/reference/parserExportAssignment1.errors.txt
parserExportAssignment1.ts(1,10): error TS2304: Cannot find name 'foo'.


==== parserExportAssignment1.ts (1 errors) ====
    export = foo
             ~~~
!!! error TS2304: Cannot find name 'foo'.